completed foundation. rspec results 158 examples, 0 failures, 8 pending. Next we start implementing LOTH functons.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,12 @@
 <footer class="footer">
   <small>
-    <a href="http://divineoffice.org/">Divine Office Builder</a>
-    by Dane Falkner
+    <a href="http://divineoffice.org/">Divine Office</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://divineoffice.org">Divine Office</a></li>
+      <li><a href="http://support.divineoffice.org">Support</a></li>
     </ul>
   </nav>
 </footer>
